src/objects/CH_SecurityRule__c.object
<CustomObject>
    <description>NOKIASC-25109: This holds the information needed for Case Security Group Assignment.</description>
    <fields>
        <fullName>CH_3rdPartySecurityGroup__c</fullName>
        <description>NOKIASC-25109</description>
        <encryptionScheme>None</encryptionScheme>
        <label>3rd Party Security Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_AccountCustomerCompliance__c</fullName>
        <description>NOKIASC-25109</description>
        <label>Account Customer Compliance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US_ALTICE</fullName>
                </value>
                <value>
                    <fullName>US_AT&amp;T</fullName>
                </value>
                <value>
                    <fullName>US_Company</fullName>
                </value>
                <value>
                    <fullName>US_Cox</fullName>
                </value>
                <value>
                    <fullName>US_Govern</fullName>
                </value>
                <value>
                    <fullName>US_SCEC</fullName>
                </value>
                <value>
                    <fullName>US_Sprint</fullName>
                </value>
                <value>
                    <fullName>US_T-Mobile</fullName>
                </value>
                <value>
                    <fullName>US_VWireless</fullName>
                </value>
                <value>
                    <fullName>US_VWireline</fullName>
                </value>
                <value>
                    <fullName>NATO</fullName>
                </value>
                <value>
                    <fullName>Unassign</fullName>
                </value>
                <value>
                    <fullName>Unassigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_AccountNumber__c</fullName>
        <description>NOKIASC-25109</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>NOKIASC-25109</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CH_CARESServiceAgreement__c</fullName>
        <description>NOKIASC-25109</description>
        <encryptionScheme>None</encryptionScheme>
        <label>CARES Service Agreement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_ContractNumber__c</fullName>
        <description>NOKIASC-25109</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_Country__c</fullName>
        <description>NOKIASC-25109</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CH_Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_GWCSecurityGroup__c</fullName>
        <description>NOKIASC-25109</description>
        <encryptionScheme>None</encryptionScheme>
        <label>GWC Security Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_NokiaProductId__c</fullName>
        <description>NOKIASC-25109</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Nokia Product Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CH_OrderofExecution__c</fullName>
        <description>NOKIASC-25109</description>
        <label>Order of Execution</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CH_SecurityGroup__c</fullName>
        <description>NOKIASC-25109</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Security Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CH Security Rule</label>
    <listViews>
        <fullName>CH_SecurityRules_All</fullName>
        <columns>NAME</columns>
        <columns>CH_OrderofExecution__c</columns>
        <columns>CH_SecurityGroup__c</columns>
        <columns>CH_GWCSecurityGroup__c</columns>
        <columns>CH_3rdPartySecurityGroup__c</columns>
        <columns>CH_Country__c</columns>
        <columns>CH_NokiaProductId__c</columns>
        <columns>CH_AccountCustomerCompliance__c</columns>
        <columns>CH_CARESServiceAgreement__c</columns>
        <columns>CH_ContractNumber__c</columns>
        <columns>CH_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>CH Security Rules - All</label>
    </listViews>
    <nameField>
        <displayFormat>{00}</displayFormat>
        <label>CH Security Rule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CH Security Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>